# CMakeLinking

./: CMakeLists.txt  Person.cpp  Person.hpp  README.md  api.cpp  api.hpp  main.cpp  printname.cpp  printname.hpp
